--- a/nextflow.config
+++ b/nextflow.config
@@ -1,20 +1,8 @@
-params {
-    // path to the gzipped FASTQ read files, relative to nextflow exe
-    params.input_folder = '/mnt/disk10/users/sheenams/umi_nextflow/test/'
+params {   
+    // Input folder needs trailing slash
+    input_folder = '/mnt/disk10/users/sheenams/umi_nextflow/test/'
     workDir = '/mnt/disk10/users/sheenams/umi_nextflow/'
-
-    // specimen id
-    specimen = "NA12878"
-    // path to the genome FASTA file to use for mapping against
-    genome = "/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta"
-    // id for the run / wetlab id
-    project = "MiniOnco001R"
-    // target output directory
-    target_dir = "nf_output"
-    // configure expected resource usage
-    threads {
-      alignment = 8
-    }
+    output = 'output'
 }
 
 profiles {
@@ -25,21 +13,22 @@ profiles {
     docker.enabled = false
     singularity.autoMounts = true
     singularity.enabled = true
+    process {
+        withLabel:bwa {
+          container = 'file:///mnt/disk2/com/container-images/bwa-0.7.17.simg'
+        }
+        withLabel:samtools {
+          container = 'file:///mnt/disk2/com/container-images/samtools-1.9.simg'
+        }
+        withLabel:fgbio{
+          container = 'file:///mnt/disk2/com/container-images/fgbio-1.1.0.simg'
+        }
+        withLabel:picard{
+          container = 'file:///mnt/disk2/com/container-images/picard-2.18.16.simg'
+        }
+        withLabel:vardict{
+          container = 'file:///mnt/disk2/com/container-images/vardict-1.5.1.simg'
+        }
+    }
   }
-}
-
-process {
-    withLabel:bwa {
-        container = 'file:///mnt/disk2/com/container-images/bwa-0.7.17.simg'
-    }
-    withLabel:samtools {
-        container = 'file:///mnt/disk2/com/container-images/samtools-1.9.simg'
-    }
-    withLabel:fgbio{
-      container = 'file:///mnt/disk2/com/container-images/fgbio-1.1.0.simg'
-    }
-    withLabel:picard{
-      container = 'file:///mnt/disk2/com/container-images/picard-2.18.16.simg'
-    }
-  
 }
