--- a/nextflow.config
+++ b/nextflow.config
@@ -1,8 +1,10 @@
 params {   
     // Input folder needs trailing slash
-    input_folder = '/mnt/disk10/users/sheenams/umi_nextflow/test/'
+    input_folder = '/mnt/disk1/genetics/TGC/fastqs/200213_NB0357_MiniOncoKAPA280R-MONCv1/'
     workDir = '/mnt/disk10/users/sheenams/umi_nextflow/'
     output = 'output'
+    max_cpus = 32
+    max_memory = 128.GB
 }
 
 profiles {
@@ -16,9 +18,6 @@ profiles {
     process {
         withLabel:bwa {
           container = 'file:///mnt/disk2/com/container-images/bwa-0.7.17.simg'
-        }
-        withLabel:samtools {
-          container = 'file:///mnt/disk2/com/container-images/samtools-1.9.simg'
         }
         withLabel:fgbio{
           container = 'file:///mnt/disk2/com/container-images/fgbio-1.1.0.simg'
