--- a/nextflow.config
+++ b/nextflow.config
@@ -3,18 +3,20 @@ params {
     input_folder = '/mnt/disk1/genetics/TGC/fastqs/200213_NB0357_MiniOncoKAPA280R-MONCv1/'
     workDir = '/mnt/disk10/users/sheenams/umi_nextflow/'
     output = 'output'
-    max_cpus = 32
-    max_memory = 128.GB
 }
 
 profiles {
 	standard {
 		process.executor = 'local'
-	}
+  }
   singularity {
+    process.executor = 'local'
+    queueSize = 10
+    max_cpus = 32
+    max_memory = 128.GB
     docker.enabled = false
-    singularity.autoMounts = true
-    singularity.enabled = true
+    singularity.autoMounts = true //When true Nextflow automatically mounts host paths in the executed contained. 
+    singularity.enabled = true  // Turn this flag to true to enable Singularity executio
     process {
         withLabel:bwa {
           container = 'file:///mnt/disk2/com/container-images/bwa-0.7.17.simg'
