move all local-specific params to the `singularity` profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,15 +1,17 @@
-params {   
-    // Input folder needs trailing slash
-    input_folder = '/mnt/disk1/genetics/TGC/fastqs/200213_NB0357_MiniOncoKAPA280R-MONCv1/'
-    workDir = '/mnt/disk10/users/sheenams/umi_nextflow/'
-    output = 'output'
-}
 
 profiles {
-	standard {
-		process.executor = 'local'
-  }
   singularity {
+    params {   
+        // Input folder needs trailing slash
+        input_folder = '/mnt/disk1/genetics/TGC/fastqs/200213_NB0357_MiniOncoKAPA280R-MONCv1/'
+        picard_bed = '/mnt/disk2/com/Genomes/Picard/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.Picard.bed'
+        ref_fasta = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta'
+        ref_index = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}'
+        bed = '/mnt/disk2/com/Genomes/BED_Files/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed'
+        workDir = '/mnt/disk10/users/sheenams/umi_nextflow/'
+        output = 'output'
+    }
+    
     process.executor = 'local'
     queueSize = 10
     max_cpus = 32
