first version of uw_batch profile + manifest

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,5 +1,40 @@
+manifest {
+    homePage = 'https://gitlab.labmed.uw.edu/genetics/umi_nextflow'
+    description = 'UMI pipeline written in nextflow.'
+    version = '0.1'
+    name = 'umi-nextflow'
+}
 
 profiles {
+  uw_batch {
+      workDir = 's3://uwlm-nextflow-data/workdir/umi-nextflow'
+      process {
+          scratch = "/docker_scratch"
+          queue = 'ngs-queue'
+          executor = 'awsbatch'
+
+          withLabel:bwa {
+            container = 'quay.io/biocontainers/bwa:0.7.17--hed695b0_7'
+          }
+          withLabel:fgbio{
+            container = 'quay.io/biocontainers/fgbio:1.1.0.simg'
+          }
+          withLabel:picard{
+            container = 'quay.io/biocontainers/picard:2.9.2--py35_1'
+          }
+          withLabel:vardict{
+            container = 'quay.io/biocontainers/vardict:1.7.0--0'
+          }
+      }
+      aws {
+          region = 'us-west-2'
+          batch {
+              volumes = '/docker_scratch'
+              cliPath = '/home/ec2-user/miniconda/bin/aws'
+          }
+      }
+  }
+
   singularity {
     params {   
         // Input folder needs trailing slash
