Finish first batch🐶 implementation; add more publishDir!

--- a/nextflow.config
+++ b/nextflow.config
@@ -7,6 +7,15 @@ manifest {
 
 profiles {
   uw_batch {
+      params {
+        input_folder = 's3://uwlm-personal/nkrumm/umi/fastq/280R/'
+        output = "s3://uwlm-personal/nkrumm/umi/out/"
+        // reference files
+        picard_bed = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.Picard.bed"
+        bed = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed"
+        ref_fasta = "s3://uwlm-personal/nkrumm/references/hs37.fa"
+        ref_index = "s3://uwlm-personal/nkrumm/references/hs37.fa.{amb,ann,bwt,pac,sa}"
+      }
       workDir = 's3://uwlm-nextflow-data/workdir/umi-nextflow'
       process {
           scratch = "/docker_scratch"
@@ -14,7 +23,8 @@ profiles {
           executor = 'awsbatch'
 
           withLabel:bwa {
-            container = 'quay.io/biocontainers/bwa:0.7.17--hed695b0_7'
+            container = 'nkrumm/alignment'
+            cpus = 30
           }
           withLabel:fgbio{
             container = 'quay.io/biocontainers/fgbio:1.1.0.simg'
@@ -57,6 +67,7 @@ profiles {
     process {
         withLabel:bwa {
           container = 'file:///mnt/disk2/com/container-images/bwa-0.7.17.simg'
+          cpus = 8
         }
         withLabel:fgbio{
           container = 'file:///mnt/disk2/com/container-images/fgbio-1.1.0.simg'
