specify memory in bwa step

--- a/nextflow.config
+++ b/nextflow.config
@@ -25,6 +25,7 @@ profiles {
           withLabel:bwa {
             container = 'nkrumm/alignment'
             cpus = 30
+            memory = "60GB"
           }
           withLabel:fgbio{
             container = 'quay.io/biocontainers/fgbio:1.1.0.simg'
