update fgbio container location as well as update fgbio/picard commands to use wrapper at /usr/local/bin/(fgbio|picard), which will automatically grab the -Xmx java options.

--- a/nextflow.config
+++ b/nextflow.config
@@ -28,7 +28,7 @@ profiles {
             memory = "60GB"
           }
           withLabel:fgbio{
-            container = 'quay.io/biocontainers/fgbio:1.1.0.simg'
+            container = 'quay.io/biocontainers/fgbio:1.1.0--0'
           }
           withLabel:picard{
             container = 'quay.io/biocontainers/picard:2.9.2--py35_1'
