add picard fasta dict to references

--- a/nextflow.config
+++ b/nextflow.config
@@ -14,7 +14,7 @@ profiles {
         picard_bed = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.Picard.bed"
         bed = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed"
         ref_fasta = "s3://uwlm-personal/nkrumm/references/hs37.fa"
-        ref_index = "s3://uwlm-personal/nkrumm/references/hs37.fa.{amb,ann,bwt,pac,sa}"
+        ref_index = "s3://uwlm-personal/nkrumm/references/hs37.fa.{amb,ann,bwt,pac,sa,dict}"
       }
       workDir = 's3://uwlm-nextflow-data/workdir/umi-nextflow'
       process {
