--- a/nextflow.config
+++ b/nextflow.config
@@ -11,7 +11,7 @@ profiles {
         input_folder = 's3://uwlm-personal/nkrumm/umi/fastq/280R/'
         output = "s3://uwlm-personal/nkrumm/umi/out/"
         // reference files
-        picard_bed = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.Picard.bed"
+        picard_bed = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.interval_list"
         bed = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed"
         ref_fasta = "s3://uwlm-personal/nkrumm/references/hs37.fa"
         ref_index = "s3://uwlm-personal/nkrumm/references/hs37.fa.{amb,ann,bwt,pac,sa,dict}"
