Add majority of the quality control code

--- a/nextflow.config
+++ b/nextflow.config
@@ -9,6 +9,7 @@ profiles {
   uw_batch {
       params {
         input_folder = 's3://uwlm-personal/nkrumm/umi/fastq/280R/'
+        run_id = "280R"
         output = "s3://uwlm-personal/nkrumm/umi/out/"
         // reference files
         picard_bed = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.interval_list"
