add local profile for testing

--- a/nextflow.config
+++ b/nextflow.config
@@ -46,6 +46,39 @@ profiles {
           }
       }
   }
+  local {
+      params {
+        input_folder = 's3://uwlm-personal/nkrumm/umi/fastq/280R/'
+        run_id = "280R"
+        output = "s3://uwlm-personal/nkrumm/umi/out/"
+        // reference files
+        picard_bed = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.interval_list"
+        bed = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed"
+        ref_fasta = "s3://uwlm-personal/nkrumm/references/hs37.fa"
+        ref_index = "s3://uwlm-personal/nkrumm/references/hs37.fa.{amb,ann,bwt,pac,sa,dict,fai}"
+      }
+      
+      process {
+      
+          withLabel:bwa {
+            container = 'nkrumm/alignment'
+            cpus = 30
+            memory = "30GB"
+          }
+          withLabel:fgbio{
+            container = 'quay.io/biocontainers/fgbio:1.1.0--0'
+          }
+          withLabel:picard{
+            container = 'quay.io/biocontainers/picard:2.9.2--py35_1'
+          }
+          withLabel:vardict{
+            container = 'quay.io/biocontainers/vardict:1.7.0--0'
+          }
+      }
+      aws {
+          region = 'us-west-2'
+      }
+  }
 
   singularity {
     params {   
@@ -83,3 +116,4 @@ profiles {
     }
   }
 }
+
