add docker to local config

--- a/nextflow.config
+++ b/nextflow.config
@@ -78,6 +78,10 @@ profiles {
       aws {
           region = 'us-west-2'
       }
+      docker {
+          enabled = true
+          temp = 'auto'
+      }
   }
 
   singularity {
