upgrade picard to 2.22.1--0 (latest today); this fixes error in CollectInsertSizeMetrics which was missing RScript. (https://github.com/broadinstitute/picard/pull/1198)

--- a/nextflow.config
+++ b/nextflow.config
@@ -32,7 +32,7 @@ profiles {
             container = 'quay.io/biocontainers/fgbio:1.1.0--0'
           }
           withLabel:picard{
-            container = 'quay.io/biocontainers/picard:2.9.2--py35_1'
+            container = 'quay.io/biocontainers/picard:2.22.1--0'
           }
           withLabel:vardict{
             container = 'quay.io/biocontainers/vardict:1.7.0--0'
