--- a/nextflow.config
+++ b/nextflow.config
@@ -1,8 +1,31 @@
-params {   
-    // Input folder needs trailing slash
-    input_folder = '/mnt/disk1/genetics/TGC/fastqs/200213_NB0357_MiniOncoKAPA280R-MONCv1/'
+params {       
+    //input = '/mnt/disk10/users/sheenams/umi_nextflow/test/'    
+    //sample_metadata = '/mnt/disk10/users/sheenams/umi_nextflow/test/sample-metadata.csv'
+    //output = 'test_output'
+    
+   
     workDir = '/mnt/disk10/users/sheenams/umi_nextflow/'
-    output = 'output'
+
+    //input = '/mnt/disk1/genetics/TGC/fastqs/200213_NB0357_MiniOncoKAPA280R-MONCv1/'
+    sample_metadata = '/mnt/disk1/genetics/TGC/fastqs/200213_NB0357_MiniOncoKAPA280R-MONCv1/SampleSheet.csv'
+    //output = 'output'
+
+
+    genomes_base = '/mnt/disk2/com/Genomes/'
+  assays {
+    'MONCv1' {
+      picard_intervals = "/mnt/disk2/com/Genomes/Picard/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.Picard.bed"
+      bed_file = "/mnt/disk2/com/Genomes/BED_Files/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed"
+    }
+  }
+  genomes {
+    'GRCh37' {
+      bwa_index = "/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa}"
+      ref_fasta_dict = "/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.dict"
+      ref_fasta = "/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta"
+      ref_fasta_fai = "/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta.fai"
+    }
+  }
 }
 
 profiles {
