update container versions to be the same in local and uwbatch profiles

--- a/nextflow.config
+++ b/nextflow.config
@@ -37,6 +37,15 @@ profiles {
           withLabel:vardict{
             container = 'quay.io/biocontainers/vardict:1.7.0--0'
           }
+          withLabel:fastqc{
+            container = 'quay.io/biocontainers/fastqc:0.11.8--1'
+          }
+          withLabel:mosdepth{
+            container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
+          }
+          withLabel:multiqc{
+            container = 'quay.io/biocontainers/multiqc:1.8--py_2'
+          }
       }
       aws {
           region = 'us-west-2'
@@ -71,11 +80,21 @@ profiles {
             container = 'quay.io/biocontainers/fgbio:1.1.0--0'
           }
           withLabel:picard{
-            container = 'quay.io/biocontainers/picard:2.9.2--py35_1'
+            container = 'quay.io/biocontainers/picard:2.22.1--0'
           }
           withLabel:vardict{
             container = 'quay.io/biocontainers/vardict:1.7.0--0'
           }
+          withLabel:fastqc{
+            container = 'quay.io/biocontainers/fastqc:0.11.8--1'
+          }
+          withLabel:mosdepth{
+            container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
+          }
+          withLabel:multiqc{
+            container = 'quay.io/biocontainers/multiqc:1.8--py_2'
+          }
+
       }
       aws {
           region = 'us-west-2'
