--- a/nextflow.config
+++ b/nextflow.config
@@ -45,7 +45,7 @@ profiles {
             container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
           }
           withLabel:multiqc{
-            container = 'quay.io/biocontainers/multiqc:1.8--py_2'
+            container = 'nkrumm/multiqc-pandas'
           }
       }
       aws {
@@ -95,7 +95,9 @@ profiles {
           withLabel:multiqc{
             container = 'quay.io/biocontainers/multiqc:1.8--py_2'
           }
-
+          withLabel:python{
+            container = 'nkrumm/multiqc-pandas'
+          }
       }
       aws {
           region = 'us-west-2'
