--- a/nextflow.config
+++ b/nextflow.config
@@ -104,6 +104,53 @@ profiles {
           temp = 'auto'
       }
   }
+
+  docker_s3_local {
+      params {
+        input_folder = 's3://uwlm-personal/nkrumm/umi/fastq/280R/'
+        run_id = "280R"
+        output = "s3://uwlm-personal/nkrumm/umi/out/"
+        // reference files
+        picard_targets = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.interval_list"
+        picard_baits = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.probes.interval_list"
+        bed = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed"
+        ref_fasta = "s3://uwlm-personal/nkrumm/references/hs37.fa"
+        ref_index = "s3://uwlm-personal/nkrumm/references/hs37.fa.{amb,ann,bwt,pac,sa,dict,fai}"
+      }
+  
+      process {
+          withLabel:bwa {
+            container = 'nkrumm/alignment'
+            cpus = 8
+            memory = "30GB"
+          }
+          withLabel:fgbio{
+            container = 'quay.io/biocontainers/fgbio:1.1.0--0'
+          }
+          withLabel:picard{
+            container = 'quay.io/biocontainers/picard:2.22.1--0'
+          }
+          withLabel:vardict{
+            container = 'quay.io/biocontainers/vardict:1.7.0--0'
+          }
+          withLabel:fastqc{
+            container = 'quay.io/biocontainers/fastqc:0.11.8--1'
+          }
+          withLabel:mosdepth{
+            container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
+          }
+          withLabel:multiqc{
+            container = 'nkrumm/multiqc-pandas'
+          }
+      }
+      aws {
+          region = 'us-west-2'
+      }
+      docker {
+          enabled = true
+          temp = 'auto'
+      }
+  }
 }
 
 
