Update batch + s3_local profiles to use new estimated targets

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,7 +12,7 @@ profiles {
         run_id = "280R"
         output = "s3://uwlm-personal/nkrumm/umi/out/"
         // reference files
-        picard_targets = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.interval_list"
+        picard_targets = "s3://uwlm-personal/nkrumm/umi/reference/MONC_estimated_targets.nochr.interval_list"
         picard_baits = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.probes.interval_list"
         bed = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed"
         ref_fasta = "s3://uwlm-personal/nkrumm/references/hs37.fa"
@@ -111,7 +111,7 @@ profiles {
         run_id = "280R"
         output = "s3://uwlm-personal/nkrumm/umi/out/"
         // reference files
-        picard_targets = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.interval_list"
+        picard_targets = "s3://uwlm-personal/nkrumm/umi/reference/MONC_estimated_targets.nochr.interval_list"
         picard_baits = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.probes.interval_list"
         bed = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed"
         ref_fasta = "s3://uwlm-personal/nkrumm/references/hs37.fa"
