Switch to using ubuntu:18.04 for multiqc-pandas

--- a/dockerfiles/multiqc-pandas/Dockerfile
+++ b/dockerfiles/multiqc-pandas/Dockerfile
@@ -1,16 +1,17 @@
-# Teeny-tiny matplotlib image based on alpine
-FROM ewels/multiqc:dev
+FROM ubuntu:18.04
 
-RUN apk add --no-cache --update \
-    python3 python3-dev gcc \
-    gfortran musl-dev g++ \
-    libffi-dev openssl-dev \
-    libxml2 libxml2-dev \
-    libxslt libxslt-dev \
-    libjpeg-turbo-dev zlib-dev
-
-RUN pip install --upgrade pip
+RUN apt-get update \
+  && apt-get install -y python3-pip python3-dev \
+  && cd /usr/local/bin \
+  && ln -s /usr/bin/python3 python \
+  && pip3 install --upgrade pip
 
 RUN pip install pandas
 
-ENTRYPOINT [ "/bin/bash" ]
+RUN pip install multiqc
+
+ENV LC_ALL=C.UTF-8
+ENV LANG=C.UTF-8
+
+ENTRYPOINT [ ]
+CMD [ "/bin/bash" ]
