use seqtk instead of

--- a/nextflow.config
+++ b/nextflow.config
@@ -115,7 +115,7 @@ profiles {
         run_id = "280R"
         output = "s3://uwlm-personal/nkrumm/umi/out/"
         // options
-        downsample_reads = null
+        downsample_reads = 1000000
         // reference files
         picard_targets = "s3://uwlm-personal/nkrumm/umi/reference/MONC_estimated_targets.nochr.interval_list"
         picard_baits = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.probes.interval_list"
