update config for newer docker container

--- a/nextflow.config
+++ b/nextflow.config
@@ -47,7 +47,7 @@ profiles {
             container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
           }
           withLabel:multiqc{
-            container = 'nkrumm/multiqc-pandas'
+            container = 'nkrumm/multiqc-pandas:2e12cff'
           }
       }
       aws {
@@ -97,7 +97,7 @@ profiles {
             container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
           }
           withLabel:multiqc{
-            container = 'nkrumm/multiqc-pandas'
+            container = 'nkrumm/multiqc-pandas:2e12cff'
           }
       }
       aws {
@@ -146,7 +146,7 @@ profiles {
             container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
           }
           withLabel:multiqc{
-            container = 'nkrumm/multiqc-pandas'
+            container = 'nkrumm/multiqc-pandas:2e12cff'
           }
       }
       aws {
