--- a/nextflow.config
+++ b/nextflow.config
@@ -13,6 +13,7 @@ profiles {
         output = "s3://uwlm-personal/nkrumm/umi/out/"
         // options
         downsample_reads = null
+        save_intermediate_output = false
         // reference files
         picard_targets = "s3://uwlm-personal/nkrumm/umi/reference/MONC_estimated_targets.nochr.interval_list"
         picard_baits = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.probes.interval_list"
@@ -72,6 +73,7 @@ profiles {
         run_id = 'test'
         // options
         downsample_reads = null
+        save_intermediate_output = false
         // reference files
         picard_intervals = '/mnt/disk2/com/Genomes/Picard/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.Picard.bed'
         ref_fasta = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta'
@@ -126,6 +128,7 @@ profiles {
         output = "s3://uwlm-personal/nkrumm/umi/out/"
         // options
         downsample_reads = 1000000
+        save_intermediate_output = false
         // reference files
         picard_targets = "s3://uwlm-personal/nkrumm/umi/reference/MONC_estimated_targets.nochr.interval_list"
         picard_baits = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.probes.interval_list"
