First pass mpileup process Also: Update bed file to true bed targets file (affects mosdef)

--- a/nextflow.config
+++ b/nextflow.config
@@ -17,7 +17,7 @@ profiles {
         // reference files
         picard_targets = "s3://uwlm-personal/nkrumm/umi/reference/MONC_estimated_targets.nochr.interval_list"
         picard_baits = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.probes.interval_list"
-        bed = "s3://uwlm-personal/nkrumm/umi/reference/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed"
+        bed_targets = "s3://uwlm-personal/nkrumm/umi/reference/MONC_estimated_targets.nochr.bed"
         ref_fasta = "s3://uwlm-personal/nkrumm/references/hs37.fa"
         ref_index = "s3://uwlm-personal/nkrumm/references/hs37.fa.{amb,ann,bwt,pac,sa,dict,fai}"
       }
@@ -165,6 +165,9 @@ profiles {
           }
           withLabel:multiqc{
             container = 'nkrumm/multiqc-pandas:2e12cff'
+          }
+          withLabel:bcftools {
+            container = 'quay.io/biocontainers/bcftools:1.10.2--hd2cd319_0'
           }
       }
       aws {
