add docker image defs to all profiles

--- a/nextflow.config
+++ b/nextflow.config
@@ -55,6 +55,9 @@ profiles {
           withLabel:multiqc{
             container = 'nkrumm/multiqc-pandas:2e12cff'
           }
+          withLabel:bcftools {
+            container = 'quay.io/biocontainers/bcftools:1.10.2--hd2cd319_0'
+          }
       }
       aws {
           region = 'us-west-2'
@@ -110,6 +113,9 @@ profiles {
           }
           withLabel:multiqc{
             container = 'nkrumm/multiqc-pandas:2e12cff'
+          }
+          withLabel:bcftools {
+            container = 'quay.io/biocontainers/bcftools:1.10.2--hd2cd319_0'
           }
       }
       aws {
