change targets/baits names

--- a/nextflow.config
+++ b/nextflow.config
@@ -68,7 +68,7 @@ profiles {
         // options
         downsample_reads = null
         // reference files
-        picard_intervals = '/mnt/disk2/com/Genomes/Picard/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.Picard.bed'
+        picard_targets = '/mnt/disk2/com/Genomes/Picard/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.Picard.bed'
         ref_fasta = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta'
         ref_index = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}'
         bed = '/mnt/disk2/com/Genomes/BED_Files/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed'
