update umi-varcal docker file

--- a/dockerfiles/umi-varcal/Dockerfile
+++ b/dockerfiles/umi-varcal/Dockerfile
@@ -13,10 +13,8 @@ RUN python3 -m pip install msgpack==0.5.6 \
     statsmodels
 
 RUN mkdir /home/umi-varcal &&\
-    git clone --recursive https://gitlab.com/vincent-sater/umi-varcal_v3.git /home/umi-varcal 
-    
-
-RUN cd /home/umi-varcal/functions && \
+    git clone --recursive https://gitlab.com/vincent-sater/umi-varcal_v3.git /home/umi-varcal && \
+    cd /home/umi-varcal/functions && \
     rm -r functions.so functions.c* &&\
     python3 setup.py build_ext --inplace
 
