--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -17,4 +17,4 @@ jobs:
     - name: Build the Docker image
       run: docker build dockerfiles/umi-varcal --file dockerfiles/umi-varcal/Dockerfile --tag umi-varcal:v1.0
     - name: Push Dockerhub
-      run: echo "$DOCKER_PASSWORD" | docker login --password-stdin -u "$DOCKER_USER" && docker push umi-varcal:v1.0
+      run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --password-stdin -u "${{ secrets.DOCKER_USERNAME }}" && docker push umi-varcal:v1.0
