--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -11,10 +11,13 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
-    steps:
     - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build dockerfiles/umi-varcal --file dockerfiles/umi-varcal/Dockerfile --tag sheenamt/umi-varcal:v1.0
-    - name: Push Dockerhub
-      run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login --password-stdin -u "${{ secrets.DOCKER_USERNAME }}" && docker push sheenamt/umi-varcal:v1.0
+    - name: build and push 
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: sheenamt/umi-varcal
+        path: dockerfiles/umi-varcal/
+        tags: v1.0
+        dockerfile: dockerfiles/umi-varcal/Dockerfile
