--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -8,8 +8,7 @@ on:
 
 jobs:
 
-  build:
-
+  build_umi_varcal:
     runs-on: ubuntu-latest
     - uses: actions/checkout@v2
     - name: build and push 
@@ -21,3 +20,16 @@ jobs:
         path: dockerfiles/umi-varcal/
         tags: v1.0
         dockerfile: dockerfiles/umi-varcal/Dockerfile
+
+  build_deepsnvminer:
+    runs-on: ubuntu-latest
+    - uses: actions/checkout@v2
+    - name: build and push 
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: sheenamt/deepsnvminer
+        path: dockerfiles/deepsnvminer/
+        tags: v1.0
+        dockerfile: dockerfiles/deepsnvminer/Dockerfile
