--- a/dockerfiles/deepsnvminer/Dockerfile
+++ b/dockerfiles/deepsnvminer/Dockerfile
@@ -4,12 +4,23 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         zlib1g-dev \
         libncurses5-dev \
+        librust-bzip2-dev \
+        liblzma-dev \
         gcc \
         git \
         curl \
         ca-certificates \
         make && \
     apt-get clean
+
+ENV SAMTOOLS_VERSION 0.1.19
+RUN curl -SL https://sourceforge.net/projects/samtools/files/samtools/${SAMTOOLS_VERSION}/samtools-${SAMTOOLS_VERSION}.tar.bz2 \
+    | tar -xjC /tmp/ \
+    && cd /tmp/samtools-$SAMTOOLS_VERSION \
+    && make \
+    && make install \
+    && mv samtools /usr/bin 
+
 
 ENV BWA_VERSION 0.7.17
 RUN curl -SL http:\//downloads.sourceforge.net/project/bio-bwa/bwa-$BWA_VERSION.tar.bz2 \
@@ -18,16 +29,6 @@ RUN curl -SL http:\//downloads.sourceforge.net/project/bio-bwa/bwa-$BWA_VERSION.
     && make \
     && mv /tmp/bwa-$BWA_VERSION/bwa /usr/bin
 
-ENV SAMTOOLS_VERSION 1.3.1
-RUN curl -SL https://github.com/samtools/samtools/releases/download/$SAMTOOLS_VERSION/samtools-$SAMTOOLS_VERSION.tar.bz2 \
-    | tar -xjC /tmp/ \
-    && cd /tmp/samtools-$SAMTOOLS_VERSION \
-    && make prefix=/usr/bin \
-    && make install
+RUN git clone https://github.com/mattmattmattmatt/DeepSNVMiner.git 
 
-RUN rm -rf /tmp/bwa-$BWA_VERSION /tmp/samtools-$SAMTOOLS_VERSION \
-    && apt-get clean \
-    && apt-get remove --yes --purge build-essential gcc-multilib apt-utils zlib1g-dev
-
- RUN git clone https://github.com/mattmattmattmatt/DeepSNVMiner.git && \
-    cd DeepSNVMiner 
+# CMD [ "DeepSNVMiner/run_deepseq.pl" ]
