--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -35,3 +35,31 @@ jobs:
         path: dockerfiles/deepsnvminer/
         tags: v1.0
         dockerfile: dockerfiles/deepsnvminer/Dockerfile
+
+  build_alignment:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: build and push 
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: sheenamt/alignment
+        path: dockerfiles/alignment/
+        tags: v1.0
+        dockerfile: dockerfiles/alignment/Dockerfile
+
+  build_multiqc:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: build and push 
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: sheenamt/multi_qc
+        path: dockerfiles/multiqc-pandas//
+        tags: v1.0
+        dockerfile: dockerfiles/multiqc-pandas//Dockerfile
