--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -59,7 +59,7 @@ jobs:
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: sheenamt/multi_qc
-        path: dockerfiles/multiqc-pandas//
+        repository: sheenamt/multiqc-pandas
+        path: dockerfiles/multiqc-pandas/
         tags: v1.0
-        dockerfile: dockerfiles/multiqc-pandas//Dockerfile
+        dockerfile: dockerfiles/multiqc-pandas/Dockerfile
