update versions of sheenamt dockerimages

--- a/nextflow.config
+++ b/nextflow.config
@@ -28,7 +28,7 @@ profiles {
           executor = 'awsbatch'
 
           withLabel:bwa {
-            container = 'sheenamt/alignment'
+            container = 'sheenamt/alignment:v1.0'
             cpus = 30
             memory = "60GB"
           }
@@ -53,10 +53,10 @@ profiles {
             container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
           }
           withLabel:multiqc{
-            container = 'sheenamt/multiqc-pandas:1.0'
+            container = 'sheenamt/multiqc-pandas:v1.0'
           }
           withLabel:umivarcal{
-            container = 'sheenamt/umi-varcal:1.0'
+            container = 'sheenamt/umi-varcal:v1.0'
           }
       }
       aws {
@@ -87,7 +87,7 @@ profiles {
       process {
       
           withLabel:bwa {
-            container = 'sheenamt/alignment'
+            container = 'sheenamt/alignment:v1.0'
             cpus = 8
             memory = "30GB"
           }
@@ -112,10 +112,10 @@ profiles {
             container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
           }
           withLabel:multiqc{
-            container = 'sheenamt/multiqc-pandas:1.0'
+            container = 'sheenamt/multiqc-pandas:v1.0'
           }
           withLabel:umivarcal{
-            container = 'sheenamt/umi-varcal:1.0'
+            container = 'sheenamt/umi-varcal:v1.0'
           }
       }
       aws {
@@ -145,7 +145,7 @@ profiles {
   
       process {
           withLabel:bwa {
-            container = 'sheenamt/alignment'
+            container = 'sheenamt/alignment:v1.0'
             cpus = 8
             memory = "30GB"
           }
@@ -170,10 +170,10 @@ profiles {
             container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
           }
           withLabel:multiqc{
-            container = 'sheenamt/multiqc-pandas:1.0'
+            container = 'sheenamt/multiqc-pandas:v1.0'
           }
           withLabel:umivarcal{
-            container = 'sheenamt/umi-varcal:1.0'
+            container = 'sheenamt/umi-varcal:v1.0'
           }
       }
       aws {
