add vardict to config

--- a/nextflow.config
+++ b/nextflow.config
@@ -43,9 +43,6 @@ profiles {
           withLabel:picard{
             container = 'quay.io/biocontainers/picard:2.22.1--0'
           }
-          withLabel:vardict{
-            container = 'quay.io/biocontainers/vardict:1.7.0--0'
-          }
           withLabel:fastqc{
             container = 'quay.io/biocontainers/fastqc:0.11.8--1'
           }
@@ -61,6 +58,9 @@ profiles {
           withLabel:bcftools{
             container = 'quay.io/biocontainers/bcftools:1.10.2--hd2cd319_0'
           }
+          withLabel:vardict{
+            container = 'quay.io/biocontainers/vardict-java:1.7.0--0'
+          }
       }
       aws {
           region = 'us-west-2'
@@ -73,9 +73,9 @@ profiles {
   local {
       params {        
         // Input folder needs trailing slash
-        input_folder = '/mnt/disk10/users/sheenams/umi_nextflow/266R_Fastqs/'         
+        input_folder = '/mnt/disk10/users/sheenams/umi_nextflow/small_test/'         
         workDir = '/mnt/disk10/users/sheenams/umi_nextflow/'
-        output = '266R_test_output'
+        output = 'test_output'
         run_id = '266R'
         // options
         downsample_reads = null
@@ -106,9 +106,6 @@ profiles {
           withLabel:picard{
             container = 'quay.io/biocontainers/picard:2.22.1--0'
           }
-          withLabel:vardict{
-            container = 'quay.io/biocontainers/vardict:1.7.0--0'
-          }
           withLabel:fastqc{
             container = 'quay.io/biocontainers/fastqc:0.11.8--1'
           }
@@ -124,6 +121,11 @@ profiles {
           withLabel:bcftools{
             container = 'quay.io/biocontainers/bcftools:1.10.2--hd2cd319_0'
           }
+          withLabel:vardict{
+            container = 'quay.io/biocontainers/vardict-java:1.7.0--0'
+            cpus = 8
+            memory = "8GB"
+          }
       }
       aws {
           region = 'us-west-2'
@@ -133,3 +135,4 @@ profiles {
           temp = 'auto'
       }
   }
+}
