--- a/nextflow.config
+++ b/nextflow.config
@@ -17,7 +17,7 @@ profiles {
         // reference files
         picard_targets = "s3://uwlm-ngs-refs/human/MONCv1/MONC_estimated_targets.nochr.interval_list"
         picard_baits = "s3://uwlm-ngs-refs/human/MONCv1/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.probes.interval_list"
-        bed = "s3://uwlm-ngs-refs/human/MONCv1/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed"
+        bed_targets = "s3://uwlm-ngs-refs/human/MONCv1/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed"
         ref_fasta = "s3://uwlm-ngs-refs/human/hg19/gatk-reference-genome-01202015/human_g1k_v37.fasta"
         ref_index = "s3://uwlm-ngs-refs/human/hg19/gatk-reference-genome-01202015/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}"
       }
@@ -28,7 +28,7 @@ profiles {
           executor = 'awsbatch'
 
           withLabel:bwa {
-            container = 'nkrumm/alignment2'
+            container = 'sheenamt/alignment:v1.0'
             cpus = 30
             memory = "60GB"
           }
@@ -43,9 +43,6 @@ profiles {
           withLabel:picard{
             container = 'quay.io/biocontainers/picard:2.22.1--0'
           }
-          withLabel:vardict{
-            container = 'quay.io/biocontainers/vardict:1.7.0--0'
-          }
           withLabel:fastqc{
             container = 'quay.io/biocontainers/fastqc:0.11.8--1'
           }
@@ -53,7 +50,16 @@ profiles {
             container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
           }
           withLabel:multiqc{
-            container = 'nkrumm/multiqc-pandas:2e12cff'
+            container = 'sheenamt/multiqc-pandas:v1.0'
+          }
+          withLabel:umivarcal{
+            container = 'sheenamt/umi-varcal:v1.0'
+          }
+          withLabel:bcftools{
+            container = 'quay.io/biocontainers/bcftools:1.10.2--hd2cd319_0'
+          }
+          withLabel:vardict{
+            container = 'quay.io/biocontainers/vardict-java:1.7.0--0'
           }
       }
       aws {
@@ -67,24 +73,25 @@ profiles {
   local {
       params {        
         // Input folder needs trailing slash
-        input_folder = '/mnt/disk10/users/sheenams/umi_nextflow/test/'         
+        input_folder = '/mnt/disk10/users/sheenams/umi_nextflow/small_test/'         
         workDir = '/mnt/disk10/users/sheenams/umi_nextflow/'
-        output = 'output'
-        run_id = 'test'
+        output = 'test_output'
+        run_id = '266R'
         // options
         downsample_reads = null
         save_intermediate_output = false
         // reference files
-        picard_targets = '/mnt/disk2/com/Genomes/Picard/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.Picard.bed'
+        picard_targets = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_estimated_targets.nochr.interval_list'
+        picard_baits = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.probes.interval_list'
         ref_fasta = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta'
         ref_index = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}'
-        bed = '/mnt/disk2/com/Genomes/BED_Files/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed'
+        bed_targets = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed'
       }
       
       process {
       
           withLabel:bwa {
-            container = 'nkrumm/alignment2'
+            container = 'sheenamt/alignment:v1.0'
             cpus = 8
             memory = "30GB"
           }
@@ -99,9 +106,6 @@ profiles {
           withLabel:picard{
             container = 'quay.io/biocontainers/picard:2.22.1--0'
           }
-          withLabel:vardict{
-            container = 'quay.io/biocontainers/vardict:1.7.0--0'
-          }
           withLabel:fastqc{
             container = 'quay.io/biocontainers/fastqc:0.11.8--1'
           }
@@ -109,62 +113,18 @@ profiles {
             container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
           }
           withLabel:multiqc{
-            container = 'nkrumm/multiqc-pandas:2e12cff'
+            container = 'sheenamt/multiqc-pandas:v1.0'
           }
-      }
-      aws {
-          region = 'us-west-2'
-      }
-      docker {
-          enabled = true
-          temp = 'auto'
-      }
-  }
-
-  docker_s3_local {
-      params {
-        input_folder = 's3://uwlm-personal/nkrumm/umi/fastq/280R/'
-        run_id = "280R"
-        output = "s3://uwlm-personal/nkrumm/umi/out/"
-        // options
-        downsample_reads = 1000000
-        save_intermediate_output = false
-        // reference files
-        picard_targets = "s3://uwlm-ngs-refs/human/MONCv1/MONC_estimated_targets.nochr.interval_list"
-        picard_baits = "s3://uwlm-ngs-refs/human/MONCv1/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.probes.interval_list"
-        bed = "s3://uwlm-ngs-refs/human/MONCv1/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed"
-        ref_fasta = "s3://uwlm-ngs-refs/human/hg19/gatk-reference-genome-01202015/human_g1k_v37.fasta"
-        ref_index = "s3://uwlm-ngs-refs/human/hg19/gatk-reference-genome-01202015/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}"
-      }
-  
-      process {
-          withLabel:bwa {
-            container = 'nkrumm/alignment2'
-            cpus = 8
-            memory = "30GB"
+          withLabel:umivarcal{
+            container = 'sheenamt/umi-varcal:v1.0'
           }
-          withLabel:fgbio{
-            container = 'quay.io/biocontainers/fgbio:1.1.0--0'
-          }
-          withLabel:sambamba{
-            container = 'quay.io/biocontainers/sambamba:0.7.1--h148d290_2'
-            cpus = 8
-            memory = "12 GB"
-          }
-          withLabel:picard{
-            container = 'quay.io/biocontainers/picard:2.22.1--0'
+          withLabel:bcftools{
+            container = 'quay.io/biocontainers/bcftools:1.10.2--hd2cd319_0'
           }
           withLabel:vardict{
-            container = 'quay.io/biocontainers/vardict:1.7.0--0'
-          }
-          withLabel:fastqc{
-            container = 'quay.io/biocontainers/fastqc:0.11.8--1'
-          }
-          withLabel:mosdepth{
-            container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
-          }
-          withLabel:multiqc{
-            container = 'nkrumm/multiqc-pandas:2e12cff'
+            container = 'quay.io/biocontainers/vardict-java:1.7.0--0'
+            cpus = 8
+            memory = "8GB"
           }
       }
       aws {
@@ -176,5 +136,3 @@ profiles {
       }
   }
 }
-
-
