add varscan to containers

--- a/nextflow.config
+++ b/nextflow.config
@@ -61,6 +61,10 @@ profiles {
           withLabel:vardict{
             container = 'quay.io/biocontainers/vardict-java:1.7.0--0'
           }
+          withLabel:varscan{
+            container = 'quay.io/biocontainers/varcsan:2.3.7--3'
+            memory = "8GB"
+          }
       }
       aws {
           region = 'us-west-2'
@@ -124,6 +128,10 @@ profiles {
           withLabel:vardict{
             container = 'quay.io/biocontainers/vardict-java:1.7.0--0'
             cpus = 8
+            memory = "8GB"
+          }
+          withLabel:varscan{
+            container = 'quay.io/biocontainers/varcsan:2.3.7--3'
             memory = "8GB"
           }
       }
