add new "chr" prefixed bed file, required by umi-varcal

--- a/nextflow.config
+++ b/nextflow.config
@@ -90,6 +90,8 @@ profiles {
         ref_fasta = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta'
         ref_index = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}'
         bed_targets = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed'
+        bed_targets_chr = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_chr.bed'
+
       }
       
       process {
