--- a/dockerfiles/umi-varcal/Dockerfile
+++ b/dockerfiles/umi-varcal/Dockerfile
@@ -3,7 +3,8 @@ FROM ubuntu:20.04
 RUN apt-get update && \
     apt-get install -y git \
     python3 \
-    python3-pip
+    python3-pip && \
+    apt-get clean && apt-get purge
    
 RUN python3 -m pip install msgpack==0.5.6 \
     pyfasta \
