--- a/nextflow.config
+++ b/nextflow.config
@@ -91,7 +91,10 @@ profiles {
         ref_index = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}'
         bed_targets = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed'
         bed_targets_chr = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_chr.bed'
-
+        ref_fasta_chr = '/mnt/disk10/users/sheenams/MONCv1_s3/human_g1k_v37.fasta'
+        ref_index_chr = '/mnt/disk10/users/sheenams/MONCv1_s3/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}'
+        smc2_rep = '/mnt/disk10/users/sheenams/umi_nextflow/SR_LC_SL.nochr.bed'
+        smc2_sr = '/mnt/disk10/users/sheenams/umi_nextflow/simpleRepeat.bed'
       }
       
       process {
@@ -135,6 +138,10 @@ profiles {
           withLabel:varscan{
             container = 'quay.io/biocontainers/varcsan:2.3.7--3'
             memory = "8GB"
+          }
+          withLabel:smc2{
+            container = 'sheenamt/smc2:v1.0'
+            cpus = 8
           }
       }
       aws {
