--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ 016-variant-callers ]
   pull_request:
     branches: [ master ]
 
@@ -49,3 +49,18 @@ jobs:
         path: dockerfiles/multiqc-pandas/
         tags: v1.0
         dockerfile: dockerfiles/multiqc-pandas/Dockerfile
+
+  build_smc2:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: build and push 
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        repository: sheenamt/smc2
+        path: dockerfiles/smc2/
+        tags: v1.0
+        dockerfile: dockerfiles/smc2/Dockerfile
+
