--- a/nextflow.config
+++ b/nextflow.config
@@ -20,6 +20,10 @@ profiles {
         bed_targets = "s3://uwlm-ngs-refs/human/MONCv1/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed"
         ref_fasta = "s3://uwlm-ngs-refs/human/hg19/gatk-reference-genome-01202015/human_g1k_v37.fasta"
         ref_index = "s3://uwlm-ngs-refs/human/hg19/gatk-reference-genome-01202015/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}"
+        bed_targets_chr = 's3://uwlm-ngs-refs/human/MONCv1/MONC_ctDNA1.3_designed_probe_coords_180314_chr.bed'
+        // These are specially formatted to work in umi-varcal. 
+        ref_fasta_chr = 's3://uwlm-ngs-refs/human/MONCv1/human_g1k_v37.fasta'
+        ref_index_chr = 's3://uwlm-ngs-refs/human/MONCv1/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}'
       }
       workDir = 's3://uwlm-nextflow-data/workdir/umi-nextflow'
       process {
