only build images on push to master

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ 016-variant-callers ]
+    branches: [ master ]
   pull_request:
     branches: [ master ]
 
