--- a/nextflow.config
+++ b/nextflow.config
@@ -42,6 +42,7 @@ profiles {
           }
           withLabel:picard{
             container = 'quay.io/biocontainers/picard:2.22.1--0'
+            memory = "32 GB"
           }
           withLabel:fastqc{
             container = 'quay.io/biocontainers/fastqc:0.11.8--1'
@@ -60,6 +61,10 @@ profiles {
           }
           withLabel:vardict{
             container = 'quay.io/biocontainers/vardict-java:1.7.0--0'
+          }
+          withLabel:varscan{
+            container = 'quay.io/biocontainers/varcsan:2.3.7--3'
+            memory = "8GB"
           }
       }
       aws {
@@ -73,9 +78,10 @@ profiles {
   local {
       params {        
         // Input folder needs trailing slash
-        input_folder = '/mnt/disk10/users/sheenams/umi_nextflow/small_test/'         
-        workDir = '/mnt/disk10/users/sheenams/umi_nextflow/'
-        output = 'test_output'
+        // input_folder = '/mnt/disk10/users/sheenams/umi_nextflow/small_test/'
+        // workDir = '/mnt/disk10/users/sheenams/umi_nextflow/'
+        input_source = 'flat_folder'
+        output = 'output'
         run_id = '266R'
         // options
         downsample_reads = null
@@ -88,32 +94,37 @@ profiles {
         bed_targets = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed'
       }
       
+      executor {
+        name = 'local'
+        cpus = 48
+        memory = '192GB'
+      }
+
       process {
       
           withLabel:bwa {
             container = 'sheenamt/alignment:v1.0'
             cpus = 8
-            memory = "30GB"
+            memory = "16GB"
           }
           withLabel:fgbio{
             container = 'quay.io/biocontainers/fgbio:1.1.0--0'
+            memory = "12GB"
           }
           withLabel:sambamba{
             container = 'quay.io/biocontainers/sambamba:0.7.1--h148d290_2'
             cpus = 8
-            memory = "12 GB"
+            memory = "12GB"
           }
           withLabel:picard{
             container = 'quay.io/biocontainers/picard:2.22.1--0'
+            memory = "12GB"
           }
           withLabel:fastqc{
             container = 'quay.io/biocontainers/fastqc:0.11.8--1'
           }
           withLabel:mosdepth{
             container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
-          }
-          withLabel:multiqc{
-            container = 'sheenamt/multiqc-pandas:v1.0'
           }
           withLabel:umivarcal{
             container = 'sheenamt/umi-varcal:v1.0'
@@ -126,13 +137,25 @@ profiles {
             cpus = 8
             memory = "8GB"
           }
+          withLabel:varscan{
+            container = 'quay.io/biocontainers/varcsan:2.3.7--3'
+            memory = "8GB"
+          }
+          withLabel:plotting{
+            container = 'sheenamt/multiqc-pandas:v1.0'
+            memory = "4GB"
+          }
+
       }
-      aws {
-          region = 'us-west-2'
-      }
+
       docker {
           enabled = true
           temp = 'auto'
       }
+
+      report.enabeled = true
+      trace.enabeled = true
+      timeline.enabled = true
+
   }
 }
