switched from baits to targets in mpileup; only generating mpileup for one min mapQ

--- a/nextflow.config
+++ b/nextflow.config
@@ -91,7 +91,8 @@ profiles {
         picard_baits = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.probes.interval_list'
         ref_fasta = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta'
         ref_index = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}'
-        bed_targets = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed'
+        bed_baits = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed'
+        bed_targets = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_estimated_targets.nochr.bed'
       }
       
       executor {
@@ -101,6 +102,8 @@ profiles {
       }
 
       process {
+
+          errorStrategy = 'ignore'
       
           withLabel:bwa {
             container = 'sheenamt/alignment:v1.0'
