--- a/nextflow.config
+++ b/nextflow.config
@@ -76,89 +76,88 @@ profiles {
       }
   }
   local {
-      params {        
-        // Input folder needs trailing slash
-        // input_folder = '/mnt/disk10/users/sheenams/umi_nextflow/small_test/'
-        // workDir = '/mnt/disk10/users/sheenams/umi_nextflow/'
-        input_source = 'flat_folder'
-        output = 'output'
-        run_id = '266R'
-        // options
-        downsample_reads = null
-        save_intermediate_output = false
-        // reference files
-        picard_targets = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_estimated_targets.nochr.interval_list'
-        picard_baits = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.probes.interval_list'
-        ref_fasta = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta'
-        ref_index = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}'
-        bed_baits = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed'
-        bed_targets = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_estimated_targets.nochr.bed'
+    report.enabeled = true
+    trace.enabeled = true
+    timeline.enabled = true
+
+    params {
+      // Input folder needs trailing slash
+      input_folder = null
+      // workDir = '/mnt/disk10/users/sheenams/umi_nextflow/'
+      input_source = 'flat_folder'
+      output = 'output'
+      run_id = '266R'
+      // options
+      downsample_reads = null
+      save_intermediate_output = false
+      // reference files
+      picard_targets = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_estimated_targets.nochr.interval_list'
+      picard_baits = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.probes.interval_list'
+      ref_fasta = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta'
+      ref_index = '/mnt/disk2/com/Genomes/gatk-bundle/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}'
+      bed_baits = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed'
+      bed_targets = '/mnt/disk10/users/sheenams/MONCv1_s3/MONC_estimated_targets.nochr.bed'
+    }
+    
+    executor {
+      name = 'local'
+      cpus = 48
+      memory = '192GB'
+    }
+
+    process {
+
+      errorStrategy = 'ignore'
+  
+      withLabel:bwa {
+        container = 'sheenamt/alignment:v1.0'
+        cpus = 8
+        memory = "16GB"
       }
-      
-      executor {
-        name = 'local'
-        cpus = 48
-        memory = '192GB'
+      withLabel:fgbio{
+        container = 'quay.io/biocontainers/fgbio:1.1.0--0'
+        memory = "12GB"
       }
-
-      process {
-
-          errorStrategy = 'ignore'
-      
-          withLabel:bwa {
-            container = 'sheenamt/alignment:v1.0'
-            cpus = 8
-            memory = "16GB"
-          }
-          withLabel:fgbio{
-            container = 'quay.io/biocontainers/fgbio:1.1.0--0'
-            memory = "12GB"
-          }
-          withLabel:sambamba{
-            container = 'quay.io/biocontainers/sambamba:0.7.1--h148d290_2'
-            cpus = 8
-            memory = "12GB"
-          }
-          withLabel:picard{
-            container = 'quay.io/biocontainers/picard:2.22.1--0'
-            memory = "12GB"
-          }
-          withLabel:fastqc{
-            container = 'quay.io/biocontainers/fastqc:0.11.8--1'
-          }
-          withLabel:mosdepth{
-            container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
-          }
-          withLabel:umivarcal{
-            container = 'sheenamt/umi-varcal:v1.0'
-          }
-          withLabel:bcftools{
-            container = 'quay.io/biocontainers/bcftools:1.10.2--hd2cd319_0'
-          }
-          withLabel:vardict{
-            container = 'quay.io/biocontainers/vardict-java:1.7.0--0'
-            cpus = 8
-            memory = "8GB"
-          }
-          withLabel:varscan{
-            container = 'quay.io/biocontainers/varcsan:2.3.7--3'
-            memory = "8GB"
-          }
-          withLabel:plotting{
-            container = 'sheenamt/multiqc-pandas:v1.0'
-            memory = "4GB"
-          }
-
+      withLabel:sambamba{
+        container = 'quay.io/biocontainers/sambamba:0.7.1--h148d290_2'
+        cpus = 8
+        memory = "12GB"
       }
-
-      docker {
-          enabled = true
-          temp = 'auto'
+      withLabel:picard{
+        container = 'quay.io/biocontainers/picard:2.22.1--0'
+        memory = "12GB"
+      }
+      withLabel:fastqc{
+        container = 'quay.io/biocontainers/fastqc:0.11.8--1'
+      }
+      withLabel:mosdepth{
+        container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
+      }
+      withLabel:umivarcal{
+        container = 'sheenamt/umi-varcal:v1.0'
+      }
+      withLabel:bcftools{
+        container = 'quay.io/biocontainers/bcftools:1.10.2--hd2cd319_0'
+      }
+      withLabel:vardict{
+        container = 'quay.io/biocontainers/vardict-java:1.7.0--0'
+        cpus = 8
+        memory = "8GB"
+      }
+      withLabel:varscan{
+        container = 'quay.io/biocontainers/varcsan:2.3.7--3'
+        memory = "8GB"
+      }
+      withLabel:plotting{
+        container = 'sheenamt/multiqc-pandas:v1.0'
+        memory = "4GB"
       }
 
-      report.enabeled = true
-      trace.enabeled = true
-      timeline.enabled = true
+    }
 
+    docker {
+        enabled = true
+        temp = 'auto'
+    }
   }
 }
