added bed_targets to s3; default parameter changes; formatting improvements

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,8 +8,8 @@ manifest {
 profiles {
   uw_batch {
       params {
-        input_folder = 's3://uwlm-personal/nkrumm/umi/fastq/280R/'
-        run_id = "280R"
+        input_folder = null
+        run_id = null
         output = "s3://uwlm-personal/nkrumm/umi/out/"
         // options
         downsample_reads = null
@@ -17,7 +17,8 @@ profiles {
         // reference files
         picard_targets = "s3://uwlm-ngs-refs/human/MONCv1/MONC_estimated_targets.nochr.interval_list"
         picard_baits = "s3://uwlm-ngs-refs/human/MONCv1/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.probes.interval_list"
-        bed_targets = "s3://uwlm-ngs-refs/human/MONCv1/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed"
+        bed_baits = "s3://uwlm-ngs-refs/human/MONCv1/MONC_ctDNA1.3_designed_probe_coords_180314_no_chr.bed"
+        bed_targets = "s3://uwlm-ngs-refs/human/MONCv1/MONC_estimated_targets.nochr.bed"
         ref_fasta = "s3://uwlm-ngs-refs/human/hg19/gatk-reference-genome-01202015/human_g1k_v37.fasta"
         ref_index = "s3://uwlm-ngs-refs/human/hg19/gatk-reference-genome-01202015/human_g1k_v37.fasta.{amb,ann,bwt,pac,sa,dict,fai}"
       }
@@ -34,24 +35,31 @@ profiles {
           }
           withLabel:fgbio{
             container = 'quay.io/biocontainers/fgbio:1.1.0--0'
+            memory = "12GB"
           }
           withLabel:sambamba{
             container = 'quay.io/biocontainers/sambamba:0.7.1--h148d290_2'
             cpus = 8
-            memory = "12 GB"
+            memory = "12GB"
           }
           withLabel:picard{
             container = 'quay.io/biocontainers/picard:2.22.1--0'
-            memory = "32 GB"
+            memory = "32GB"
           }
           withLabel:fastqc{
             container = 'quay.io/biocontainers/fastqc:0.11.8--1'
+            cpus 2
+            memory "8GB"
           }
           withLabel:mosdepth{
             container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
+            cpus 4 // per docs, no benefit after 4 threads
+            memory '4GB'
           }
           withLabel:multiqc{
             container = 'sheenamt/multiqc-pandas:v1.0'
+            cpus 4
+            memory '4GB'
           }
           withLabel:umivarcal{
             container = 'sheenamt/umi-varcal:v1.0'
@@ -62,10 +70,15 @@ profiles {
           withLabel:vardict{
             container = 'quay.io/biocontainers/vardict-java:1.7.0--0'
           }
-          withLabel:varscan{
-            container = 'quay.io/biocontainers/varcsan:2.3.7--3'
+          withLabel:pileup{
+            container = 'sheenamt/alignment:v1.0'
+            cpus = 2
             memory = "8GB"
           }
+          // withLabel:varscan{
+          //   container = 'quay.io/biocontainers/varcsan:2.3.7--3'
+          //   memory = "8GB"
+          // }
       }
       aws {
           region = 'us-west-2'
@@ -83,10 +96,10 @@ profiles {
     params {
       // Input folder needs trailing slash
       input_folder = null
+      run_id = null
       // workDir = '/mnt/disk10/users/sheenams/umi_nextflow/'
       input_source = 'flat_folder'
       output = 'output'
-      run_id = '266R'
       // options
       downsample_reads = null
       save_intermediate_output = false
@@ -107,7 +120,7 @@ profiles {
 
     process {
 
-      errorStrategy = 'ignore'
+      errorStrategy = 'ignore'  // continues pipeline even when one process errors out; similar to -k flag in scons
   
       withLabel:bwa {
         container = 'sheenamt/alignment:v1.0'
@@ -129,9 +142,18 @@ profiles {
       }
       withLabel:fastqc{
         container = 'quay.io/biocontainers/fastqc:0.11.8--1'
+        cpus 2
+        memory "8GB"
       }
       withLabel:mosdepth{
         container = 'quay.io/biocontainers/mosdepth:0.2.9--hbeb723e_0'
+        cpus 4 // per docs, no benefit after 4 threads
+        memory '4GB'
+      }
+      withLabel:multiqc{
+        container = 'sheenamt/multiqc-pandas:v1.0'
+        cpus 4
+        memory '4GB'
       }
       withLabel:umivarcal{
         container = 'sheenamt/umi-varcal:v1.0'
@@ -144,14 +166,19 @@ profiles {
         cpus = 8
         memory = "8GB"
       }
-      withLabel:varscan{
-        container = 'quay.io/biocontainers/varcsan:2.3.7--3'
-        memory = "8GB"
+      withLabel:pileup{
+        container = 'sheenamt/alignment:v1.0'
+        cpus = 2
+        memory = "4GB"
       }
       withLabel:plotting{
         container = 'sheenamt/multiqc-pandas:v1.0'
         memory = "4GB"
       }
+      // withLabel:varscan{
+      //   container = 'quay.io/biocontainers/varcsan:2.3.7--3'
+      //   memory = "8GB"
+      // }
 
     }
 
